# telemetry-obd

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
config/: default.ini
docs/: Python310-Install.md  Python311-Install.md  README-BluetoothPairing.md  README-UltraDict.md  python-OBD-Install.md
etc/: rc.local
telemetry-obd-0.4.2/telemetry_obd/: obd_logger.py
telemetry_obd/: __init__.py  add_commands.py  configuration_file_validation.py  list_all_commands.py  obd_command_tester.py  obd_common_functions.py  obd_logger.py  telemetry_common_functions.py
