[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
obd_logger = "obd_logger:main"

[project]
name = "telemetry-obd"
version = "0.5.0"
description = "Telemetry OBD Data Logger"
authors = [
    { name = "Larry Pearson", email = "no-reply@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["obd", "telematics", "vehicle"]
dependencies = [
  'obd == 0.7.2',
  'pint == 0.20.1',
  'rich >= 10.12.0',
  'obd == 0.7.2',
  'telemetry-counter @ git+ssh://github.com/thatlarrypearson/telemetry-counter.git',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/thatlarrypearson/telemetry-obd"
repository = "https://github.com/thatlarrypearson/telemetry-obd"
documentation = "https://github.com/thatlarrypearson/telemetry-obd"

