[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "telemetry-obd"
url = "https://github.com/thatlarrypearson/telemetry-obd"
version = "0.5.0"
description = "Telemetry OBD Data Logger"
long_description = "file:README.md"
authors = [
    "Larry Pearson <no-reply@gmail.com>",
]
license = "MIT"
readme = "README.md"
python = "3.11"
homepage = "https://github.com/thatlarrypearson/telemetry-obd"
repository = "https://github.com/thatlarrypearson/telemetry-obd"
documentation = "https://github.com/thatlarrypearson/telemetry-obd"
keywords = ["obd", "telematics", "vehicle"]
dependencies = [
  'obd == 0.7.2',
  'pint == 0.20.1',
  'rich >= 10.12.0',
  'obd == 0.7.2',
  'telemetry-counter == 0.5.0',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


