[check-manifest]
ignore =
    *.sublime-project
    .git*
    .vscode/*
    manage.py
    data/*
    tmp/*
    examples/*
    stuff/*
    docs/*
    .mypy*
    .pytest*
    __pycache__*


[metadata]
name = telemetry-obd
author = Larry Pearson
author_email = not-an-email-address@gmail.com
version = 0.5.0
description = Telemetry Onboard Diagnostic Data Logger.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/thatlarrypearson?tab=repositories
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.10
setup_requires = 
    setuptools >= 38.3.0
install_requires =
    obd == 0.7.2
    pint == 0.20.1
    rich >= 10.12.0
    obd == 0.7.2
    telemetry-counter == 0.5.0
packages = find:
